feat: upgrade demo to HCD 2.0.6 (Cassandra 5.0 / Java 17) + adversarial audit arena
Upgrade the 85-module HCD 1.2.3 demo to a 94-module HCD 2.0.6 demo and add a
dedicated adversarial audit engine.

HCD 2.0 upgrade (PR-1..5):
- Base image eclipse-temurin:17-jre; tarball hcd-2.0.6; `make verify-release`; colima preflight.
- Paxos v2 as the default consensus (cassandra.yaml.template) + LWT cross-refs.
- New Part 11 (modules 85-93): Dynamic Data Masking, CIDR authorizer, DC-level RBAC,
  mTLS, Paxos v2 benchmark, auth hardening, PEM SSL, audit 2.0, Java 17/ZGC.
- Secure profile: docker-compose.secure.yml overlay + HCD_SECURITY_PROFILE gating in
  the entrypoint + config/cassandra-secure.yaml.fragment + scripts/gen-certs.sh (PEM PKI).
- Cassandra-5.0 scalar math functions into Module 83; Grafana Paxos/auth panels.

Post-implementation MECE audit fixes:
- CRITICAL: secure cluster could not form (anonymous cqlsh vs PasswordAuthenticator) ->
  baked cqlshrc + ENV HOME; `make secure-bootstrap` for system_auth replication.
- CRITICAL CQL: column_masks columns, mask_outer->mask_inner, GRANT ON KEYSPACE.
- HIGH: sstable* wrapper path resolution; Module 92 gated; LIST IDENTITIES ->
  system_auth.identity_to_role; stale hcd-1.2.3 prerequisite.
- tests/test_secure_profile.py (gen-certs, fragment dup-keys, overlay, entrypoint, panels);
  suite green (253 passed, 20 skipped); scorecard 94/94.

Adversarial audit arena (audit_arena/):
- 4-role tribunal (Prosecutor/Defender/Judge/Oracle) adapted to HCD/Cassandra dimensions.
- Deterministic Oracle (the HCD-specific upgrade): cqlsh/demo-score/shellcheck/dup-keys/
  compose, with live-cluster checks marked ORACLE-DEFERRED until the tarball is staged.
- Mode B external-family adapter (llm.sh) double-gated: ARENA_MODE_B=1 egress opt-in + key-gated.
- `make audit` + deterministic pre-push gate (audit_arena/bin/pre-merge-hook.sh).

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>